# ultimo-proyecto-datos

./: CMakeLists.txt  QueLeTocaAQuien.txt  README.md
código/: proyecto-2.cpp  tempCodeRunnerFile.cpp
código/json/: DatosDestinoRuta.json  clientesDatos.json  premiosDatos.json  prueba.json
